Fixed hard to see placholder type for Medium Editor text areas;

--- a/app/styles/_editor.scss
+++ b/app/styles/_editor.scss
@@ -54,4 +54,4 @@
   color: #fff; }
 
 .medium-editor-placeholder:after {
-  color: #fff; }
+  color: #bbb; }
